feat: add before and after elements in hero section

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
           <a href="#" class="nav__item">Контакты</a>
         </nav>
         <div class="contacts menu__contacts">
-          <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
+          <a href="tel:+77775231100" class="phone contacts__phone">+7 (777) 523-11-00</a>
           <button class="button contacts__button button--primary">Заказать звонок</button>
         </div>
       </div>
@@ -39,9 +39,7 @@
       <div class="container">
         <div class="hero__content">
           <h1 class="title hero__title">Турецкий ремонт в&nbsp;<span class="title--primary">Ростове-на-дону</span></h1>
-          <p class="hero__text">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20%
-            от
-            стоимости материалов за счет организации работы</p>
+          <p class="hero__text">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы</p>
           <button class="button hero__button button--primary">Рассчитать стоимость</button>
           <button class="button hero__button button--outline">Отправить заявку</button>
         </div>
