add: new section

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
       <div class="container">
         <div class="hero__content">
           <h1 class="title hero__title">Турецкий ремонт в&nbsp;<span class="title--primary">Ростове-на-дону</span></h1>
-          <p class="hero__text">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы</p>
+          <p class="hero__text">Получите готовый ремонт под ключ в срок с&nbsp;экономией рабочего времени до 45 дней и&nbsp;20% от стоимости материалов за счет организации работы</p>
           <button class="button hero__button button--primary">Рассчитать стоимость</button>
           <button class="button hero__button button--outline">Отправить заявку</button>
         </div>
@@ -50,7 +50,7 @@
     </section>
     <!-- /.hero -->
 
-    
+
     <section class="section control">
       <div class="container">
         <div class="section-title">
@@ -70,7 +70,7 @@
 
   <section class="section types">
     <div class="container">
-      <div class="section-title">
+      <div class="section-title types__section-title">
         <h2 class="section-title__heading">Виды ремонта</h2>
         <!-- /.section-title__heading -->
         <div class="section-title__image">
@@ -81,7 +81,7 @@
       <!-- /.section-title -->
       <div class="row">
         <div class="col">
-          <div class="card">
+          <div class="card types__card">
             <img src="img/types/type-1.jpg" alt="Косметический ремонт" class="card__image">
             <div class="card__text">
               <h3 class="card__title">Косметический ремонт</h3>
@@ -103,6 +103,9 @@
                 <!-- /.card__item -->
               </ul>
               <!-- /.card__list -->
+              <strong class="card__pricetag">
+                от 900 руб / м <sup>2</sup>
+              </strong>
             </div>
             <!-- /.card__text -->
           </div>
@@ -110,7 +113,7 @@
         </div>
         <!-- /.col -->
         <div class="col">
-          <div class="card">
+          <div class="card types__card">
             <img src="img/types/type-2.jpg" alt="Капитальный ремонт" class="card__image">
             <div class="card__text">
               <h3 class="card__title">Капитальный ремонт</h3>
@@ -132,6 +135,10 @@
                 <!-- /.card__item -->
               </ul>
               <!-- /.card__list -->
+              <strong class="card__pricetag">
+                от 1800 руб / м <sup>2</sup>
+              </strong>
+              <!-- /.card__pricatag -->
             </div>
             <!-- /.card__text -->
           </div>
@@ -139,7 +146,7 @@
         </div>
         <!-- /.col -->
         <div class="col">
-          <div class="card">
+          <div class="card types__card">
             <img src="img/types/type-3.jpg" alt="Дизайнерский ремонт" class="card__image">
             <div class="card__text">
               <h3 class="card__title">Дизайнерский ремонт</h3>
@@ -161,6 +168,9 @@
                 <!-- /.card__item -->
               </ul>
               <!-- /.card__list -->
+              <strong class="card__pricetag">
+                от 4000 руб / м <sup>2</sup>
+              </strong>
             </div>
             <!-- /.card__text -->
           </div>
