--- a/src/index.html
+++ b/src/index.html
@@ -183,6 +183,135 @@
     <!-- /.container -->
   </section>
   <!-- /.section types -->
+
+
+
+  <section class="section design">
+    <div class="container">
+      <div class="section-title design__section-title">
+        <h2 class="section-title__heading">Дизайн проект</h2>
+        <!-- /.section-title__heading -->
+        <div class="section-title__image">
+          <img src="img/design.svg" alt="design">
+        </div>
+        <!-- /.section-title__image -->
+        <p class="design__text">
+          Дизайн-проект не только помогает сделать ремонт вашей квартиры более современным, но и значительно удешевляет материалы и сокращает время ремонтных работ
+        </p>
+        <!-- /.design__text -->
+      </div>
+      <!-- /.section-title -->
+      <div class="row">
+        <div class="col">
+          <div class="card types__card">
+            <img src="img/design/design-1.jpg" alt="Минимальный" class="card__image">
+            <div class="card__text">
+              <h3 class="card__title">Минимальный</h3>
+              <!-- /.card__title -->
+              <ul class="card__list">
+                <li class="card__item">Измерительные чертежи</li>
+                <!-- /.card__item -->
+                <li class="card__item">Перепланировка</li>
+                <!-- /.card__item -->
+                <li class="card__item">Планировка мебели</li>
+                <!-- /.card__item -->
+                <li class="card__item">Сантехнический план</li>
+                <!-- /.card__item -->
+              </ul>
+              <!-- /.card__list -->
+              <strong class="card__pricetag">
+                от 150 руб / м <sup>2</sup>
+              </strong>
+            </div>
+            <!-- /.card__text -->
+          </div>
+          <!-- /.card -->
+        </div>
+        <!-- /.col -->
+        <div class="col">
+          <div class="card types__card">
+            <img src="img/design/design-2.jpg" alt="Стандартный" class="card__image">
+            <div class="card__text">
+              <h3 class="card__title">Стандартный</h3>
+              <!-- /.card__title -->
+              <ul class="card__list">
+                <li class="card__item">Измерительные чертежи</li>
+                <!-- /.card__item -->
+                <li class="card__item">Перепланировка</li>
+                <!-- /.card__item -->
+                <li class="card__item">Планировка мебели</li>
+                <!-- /.card__item -->
+                <li class="card__item">План потолков</li>
+                <!-- /.card__item -->
+                <li class="card__item">План этажей</li>
+                <!-- /.card__item -->
+                <li class="card__item">План электрики</li>
+                <!-- /.card__item -->
+                <li class="card__item">План света</li>
+                <!-- /.card__item -->
+              </ul>
+              <!-- /.card__list -->
+              <strong class="card__pricetag">
+                от 400 руб / м <sup>2</sup>
+              </strong>
+              <!-- /.card__pricatag -->
+            </div>
+            <!-- /.card__text -->
+          </div>
+          <!-- /.card -->
+        </div>
+        <!-- /.col -->
+        <div class="col">
+          <div class="card types__card">
+            <img src="img/design/design-3.jpg" alt="Полный" class="card__image">
+            <div class="card__text">
+              <h3 class="card__title">Полный</h3>
+              <!-- /.card__title -->
+              <ul class="card__list">
+                <li class="card__item">Измерительные чертежи</li>
+                <!-- /.card__item -->
+                <li class="card__item">Перепланировка</li>
+                <!-- /.card__item -->
+                <li class="card__item">Планировка мебели</li>
+                <!-- /.card__item -->
+                <li class="card__item">План потолков</li>
+                <!-- /.card__item -->
+                <li class="card__item">План этажей</li>
+                <!-- /.card__item -->
+                <li class="card__item">План электрики</li>
+                <!-- /.card__item -->
+                <li class="card__item">План света</li>
+                <!-- /.card__item -->
+                <li class="card__item">Стенные развертки</li>
+                <!-- /.card__item -->
+                <li class="card__item">3D визуализация</li>
+                <!-- /.card__item -->
+                <li class="card__item">Смета на материалы</li>
+                <!-- /.card__item -->
+                <li class="card__item">Выезд на подбор материалов</li>
+                <!-- /.card__item -->
+                <li class="card__item">Выбор мебели</li>
+                <!-- /.card__item -->
+              </ul>
+              <!-- /.card__list -->
+              <strong class="card__pricetag">
+                от 900 руб / м <sup>2</sup>
+              </strong>
+            </div>
+            <!-- /.card__text -->
+          </div>
+          <!-- /.card -->
+        </div>
+        <!-- /.col -->
+      </div>
+      <!-- /.row -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.section types -->
+
+
+
   </main>
 
 </body>
