--- a/src/index.html
+++ b/src/index.html
@@ -315,7 +315,7 @@
     <!-- /.section types -->
   </main>
 
-  <div class="modal">
+  <div class="modal modal--visibl">
     <div class="modal__dialog">
       <button class="modal__close"></button> 
       <!-- /.modal__close -->
@@ -346,7 +346,7 @@
 
 
 
-
+<script src="/src/js/main.js"></script>
 </body>
 
 </html>
