idonno what to say

--- a/src/index.html
+++ b/src/index.html
@@ -197,10 +197,10 @@
           </div>
           <!-- /.section-title__image -->
           <div class="design__subtitle design__subtitle--mobile">
-            <span>
-              Дизайн-проект не только помогает сделать ремонт вашей квартиры более современным, но и значительно
-              удешевляет материалы и сокращает время ремонтных работ
-            </span>
+            <p>
+              Дизайн-проект не только помогает сделать ремонт вашей квартиры более современным,
+              но&nbsp;и&nbsp;значительно удешевляет материалы и сокращает время ремонтных работ
+            </p>
           </div>
           <!-- /.design__text -->
         </div>
