fix: section title heading

--- a/src/index.html
+++ b/src/index.html
@@ -299,7 +299,7 @@
                 </ul>
                 <!-- /.card__list -->
                 <strong class="card__pricetag">
-                  от 900 руб / м <sup>2</sup>
+                  900 руб / м <sup>2</sup>
                 </strong>
               </div>
               <!-- /.card__text -->
