fix: width in lessin 19

--- a/src/index.html
+++ b/src/index.html
@@ -209,7 +209,7 @@
           <div class="col">
             <div class="card types__card">
               <img src="img/design/design-1.jpg" alt="Минимальный" class="card__image">
-              <div class="card__text">
+              <div class="card__design">
                 <h3 class="card__title">Минимальный</h3>
                 <!-- /.card__title -->
                 <ul class="card__list">
@@ -224,7 +224,7 @@
                 </ul>
                 <!-- /.card__list -->
                 <strong class="card__pricetag">
-                  от 150 руб / м <sup>2</sup>
+                  150 руб / м <sup>2</sup>
                 </strong>
               </div>
               <!-- /.card__text -->
@@ -235,7 +235,7 @@
           <div class="col">
             <div class="card types__card">
               <img src="img/design/design-2.jpg" alt="Стандартный" class="card__image">
-              <div class="card__text">
+              <div class="card__design">
                 <h3 class="card__title">Стандартный</h3>
                 <!-- /.card__title -->
                 <ul class="card__list">
@@ -256,7 +256,7 @@
                 </ul>
                 <!-- /.card__list -->
                 <strong class="card__pricetag">
-                  от 400 руб / м <sup>2</sup>
+                  400 руб / м <sup>2</sup>
                 </strong>
                 <!-- /.card__pricatag -->
               </div>
@@ -268,7 +268,7 @@
           <div class="col">
             <div class="card types__card">
               <img src="img/design/design-3.jpg" alt="Полный" class="card__image">
-              <div class="card__text">
+              <div class="card__design">
                 <h3 class="card__title">Полный</h3>
                 <!-- /.card__title -->
                 <ul class="card__list">
