fix: width on pricetag

--- a/src/index.html
+++ b/src/index.html
@@ -223,7 +223,7 @@
                   <!-- /.card__item -->
                 </ul>
                 <!-- /.card__list -->
-                <strong class="card__pricetag">
+                <strong class="design__pricetag">
                   150 руб / м <sup>2</sup>
                 </strong>
               </div>
@@ -255,7 +255,7 @@
                   <!-- /.card__item -->
                 </ul>
                 <!-- /.card__list -->
-                <strong class="card__pricetag">
+                <strong class="design__pricetag">
                   400 руб / м <sup>2</sup>
                 </strong>
                 <!-- /.card__pricatag -->
@@ -298,7 +298,7 @@
                   <!-- /.card__item -->
                 </ul>
                 <!-- /.card__list -->
-                <strong class="card__pricetag">
+                <strong class="design__pricetag">
                   900 руб / м <sup>2</sup>
                 </strong>
               </div>
