--- a/src/index.html
+++ b/src/index.html
@@ -199,7 +199,7 @@
           <div class="design__subtitle design__subtitle--mobile">
             <p>
               Дизайн-проект не только помогает сделать ремонт вашей квартиры более современным,
-              но&nbsp;и&nbsp;значительно удешевляет материалы и сокращает время ремонтных работ
+              но и&nbsp;значительно удешевляет материалы и сокращает&nbsp;время ремонтных работ
             </p>
           </div>
           <!-- /.design__text -->
