fix margin in media.sass

--- a/src/index.html
+++ b/src/index.html
@@ -192,7 +192,7 @@
         <div class="section-title design__section-title">
           <h2 class="section-title__heading">Дизайн проект</h2>
           <!-- /.section-title__heading -->
-          <div class="section-title__image">
+          <div class="section-design__image">
             <img src="img/design.svg" alt="design">
           </div>
           <!-- /.section-title__image -->
