--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         </nav>
         <div class="contacts menu__contacts">
           <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
-          <button class="button contacts__button button--primary">Заказать звонок</button>
+          <button class="button contacts__button button--primary" data-toggle="modal">Заказать звонок</button>
         </div>
       </div>
     </div>
@@ -41,7 +41,7 @@
           <h1 class="title hero__title">Турецкий ремонт в&nbsp;<span class="title--primary">Ростове-на-дону</span></h1>
           <p class="hero__text">Получите готовый ремонт под ключ в срок с&nbsp;экономией рабочего времени до 45 дней
             и&nbsp;20% от стоимости материалов за счет организации работы</p>
-          <button class="button hero__button button--primary">Рассчитать стоимость</button>
+          <button class="button hero__button button--primary" data-toggle="modal">Рассчитать стоимость</button>
           <button class="button hero__button button--outline">Отправить заявку</button>
         </div>
         <!-- /.hero__content -->
@@ -315,7 +315,7 @@
     <!-- /.section types -->
   </main>
 
-  <div class="modal modal--visibl">
+  <div class="modal">
     <div class="modal__dialog">
       <button class="modal__close"></button> 
       <!-- /.modal__close -->
