--- a/src/index.html
+++ b/src/index.html
@@ -345,7 +345,7 @@
   <!-- /.modal -->
 
 
-
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 
