make scroll-up button and video background

--- a/src/index.html
+++ b/src/index.html
@@ -344,7 +344,10 @@
   </div>
   <!-- /.modal -->
 
-
+<div class="go-up">
+  <button class="scroll-up">Вверх</button>
+</div>
+<script src="./js/jquery.vide.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="js/main.js"></script>
 </body>
