--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Yeseva+One&display=swap&subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
   <link rel="stylesheet" href="css/style.css">
   <title>gulpfile</title>
 </head>
@@ -51,6 +52,136 @@
     </section>
     <!-- /.hero -->
 
+    <section class="section section--dark projects">
+      <div class="container">
+        <div class="row">
+          <div class="col-50">
+            <div class="section-title section-title--left">
+              <h2 class="section-title__heading section-title__heading--primary">Завершенные <span
+                  class="section-title__word">проекты</span></h2>
+              <!-- /.section-title__heading -->
+              <p class="section-title__text">На сайте представлена ​​лишь небольшая часть работ, выполняемых нашей
+                компанией. За 14 лет работы на строительном рынке мы осчастливили более 1000 семей</p>
+            </div>
+            <!-- /.section-title -->
+
+              <!-- Slider main container -->
+              <div class="swiper-container">
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper swiper-no-swiping">
+                  <!-- Slides -->
+                  <div class="swiper-slide">
+                    <div class="swiper-slide__text">
+                    <h3 class="swiper-slide__heading">Город:</h3>
+                    <span class="swiper-slide__value">Ростове-на-дону</span>
+                <!-- <span class="swiper-slide__value">ЖК Адмирал</span> -->
+                  </div>
+                  <!-- /.swiper-slide__text -->
+
+                    <div class="swiper-slide__text">
+                      <h3 class="swiper-slide__heading">Площадь:</h3>
+                      <span class="swiper-slide__value">81 м<sup>2</sup></span>
+                    </div>
+                    <!-- /.swiper-slide__text -->
+
+                    <div class="swiper-slide__text">
+                      <h3 class="swiper-slide__heading">Срок ремонта:</h3>
+                      <span class="swiper-slide__value">3,5 месяца</span>
+                    </div>
+                    <!-- /.swiper-slide__text -->
+
+                    <div class="swiper-slide__text">
+                      <h3 class="swiper-slide__heading">Стоимость:</h3>
+                      <span class="swiper-slide__value">По запросу</span>
+                    </div>
+                    <!-- /.swiper-slide__text -->
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="swiper-slide__text">
+                      <h3 class="swiper-slide__heading">Город:</h3>
+                      <span class="swiper-slide__value">Ростове-на-дону</span>
+                      <!-- <span class="swiper-slide__value">ЖК Адмирал</span> -->
+                    </div>
+                    <!-- /.swiper-slide__text -->
+
+                    <div class="swiper-slide__text">
+                      <h3 class="swiper-slide__heading">Площадь:</h3>
+                      <span class="swiper-slide__value">81 м<sup>2</sup></span>
+                    </div>
+                    <!-- /.swiper-slide__text -->
+
+                    <div class="swiper-slide__text">
+                      <h3 class="swiper-slide__heading">Срок ремонта:</h3>
+                      <span class="swiper-slide__value">3,5 месяца</span>
+                    </div>
+                    <!-- /.swiper-slide__text -->
+
+                    <div class="swiper-slide__text">
+                      <h3 class="swiper-slide__heading">Стоимость:</h3>
+                      <span class="swiper-slide__value">По запросу</span>
+                    </div>
+                    <!-- /.swiper-slide__text -->
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="swiper-slide__text">
+                      <h3 class="swiper-slide__heading">Город:</h3>
+                      <span class="swiper-slide__value">Ростове-на-дону</span>
+                      <!-- <span class="swiper-slide__value">ЖК Адмирал</span> -->
+                    </div>
+                    <!-- /.swiper-slide__text -->
+
+                    <div class="swiper-slide__text">
+                      <h3 class="swiper-slide__heading">Площадь:</h3>
+                      <span class="swiper-slide__value">81 м<sup>2</sup></span>
+                    </div>
+                    <!-- /.swiper-slide__text -->
+
+                    <div class="swiper-slide__text">
+                      <h3 class="swiper-slide__heading">Срок ремонта:</h3>
+                      <span class="swiper-slide__value">3,5 месяца</span>
+                    </div>
+                    <!-- /.swiper-slide__text -->
+
+                    <div class="swiper-slide__text">
+                      <h3 class="swiper-slide__heading">Стоимость:</h3>
+                      <span class="swiper-slide__value">По запросу</span>
+                    </div>
+                    <!-- /.swiper-slide__text -->
+                  </div>
+                </div>
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-next"></div>
+              </div>
+
+          </div>
+
+          <div class="col-50">
+            <!-- Slider main container -->
+            <div class="swiper-container">
+              <!-- Additional required wrapper -->
+              <div class="swiper-wrapper swiper-no-swiping">
+
+                <!-- Slides -->
+                <div class="swiper-slide">
+                  <img src="img/project.jpg" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="img/project.jpg" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="img/project.jpg" alt="">
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container -->
+    </section>
 
     <section class="section control">
       <div class="container">
@@ -81,7 +212,7 @@
         </div>
         <!-- /.section-title -->
         <div class="row">
-          <div class="col">
+          <div class="col-30">
             <div class="card types__card">
               <img src="img/types/type-1.jpg" alt="Косметический ремонт" class="card__image">
               <div class="card__text">
@@ -112,8 +243,8 @@
             </div>
             <!-- /.card -->
           </div>
-          <!-- /.col -->
-          <div class="col">
+          <!-- /.col-30 -->
+          <div class="col-30">
             <div class="card types__card">
               <img src="img/types/type-2.jpg" alt="Капитальный ремонт" class="card__image">
               <div class="card__text">
@@ -145,8 +276,8 @@
             </div>
             <!-- /.card -->
           </div>
-          <!-- /.col -->
-          <div class="col">
+          <!-- /.col-30 -->
+          <div class="col-30">
             <div class="card types__card">
               <img src="img/types/type-3.jpg" alt="Дизайнерский ремонт" class="card__image">
               <div class="card__text">
@@ -177,7 +308,7 @@
             </div>
             <!-- /.card -->
           </div>
-          <!-- /.col -->
+          <!-- /.col-30 -->
         </div>
         <!-- /.row -->
       </div>
@@ -206,7 +337,7 @@
         </div>
         <!-- /.section-title -->
         <div class="row">
-          <div class="col">
+          <div class="col-30">
             <div class="card types__card">
               <img src="img/design/design-1.jpg" alt="Минимальный" class="card__image">
               <div class="card__design">
@@ -231,8 +362,8 @@
             </div>
             <!-- /.card -->
           </div>
-          <!-- /.col -->
-          <div class="col">
+          <!-- /.col-30 -->
+          <div class="col-30">
             <div class="card types__card">
               <img src="img/design/design-2.jpg" alt="Стандартный" class="card__image">
               <div class="card__design">
@@ -264,8 +395,8 @@
             </div>
             <!-- /.card -->
           </div>
-          <!-- /.col -->
-          <div class="col">
+          <!-- /.col-30 -->
+          <div class="col-30">
             <div class="card types__card">
               <img src="img/design/design-3.jpg" alt="Полный" class="card__image">
               <div class="card__design">
@@ -306,7 +437,7 @@
             </div>
             <!-- /.card -->
           </div>
-          <!-- /.col -->
+          <!-- /.col-30 -->
         </div>
         <!-- /.row -->
       </div>
@@ -349,6 +480,7 @@
 </div>
 <script src="./js/jquery.vide.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 
