--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
         <div class="row">
           <div class="col-50">
             <div class="section-title section-title--left">
-              <h2 class="section-title__heading section-title__heading--primary">Завершенные <span
+              <h2 class="section-title__heading section-title__heading--primary project--title">Завершенные <span
                   class="section-title__word">проекты</span></h2>
               <!-- /.section-title__heading -->
               <p class="section-title__text">На сайте представлена ​​лишь небольшая часть работ, выполняемых нашей
@@ -73,8 +73,11 @@
                   <div class="swiper-slide">
                     <div class="swiper-slide__text">
                     <h3 class="swiper-slide__heading">Город:</h3>
-                    <span class="swiper-slide__value">Ростове-на-дону</span>
-                <!-- <span class="swiper-slide__value">ЖК Адмирал</span> -->
+                    <span class="swiper-slide__value">
+                      Ростове-на-дону
+                      <br>
+                      ЖК Адмирал
+                    </span>
                   </div>
                   <!-- /.swiper-slide__text -->
 
@@ -165,13 +168,13 @@
 
                 <!-- Slides -->
                 <div class="swiper-slide">
-                  <img src="img/project.jpg" alt="">
+                  <img src="img/project/project-1.jpg" alt="project-1" class="project--image">
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/project.jpg" alt="">
+                  <img src="img/project/project-2.jpg" alt="project-2" class="project--image">
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/project.jpg" alt="">
+                  <img src="img/project/project-3.jpg" alt="project-3" class="project--image">
                 </div>
 
               </div>
@@ -198,7 +201,6 @@
       <!-- /.container -->
     </section>
     <!-- /.section control -->
-
 
     <section class="section types">
       <div class="container">
@@ -315,8 +317,6 @@
       <!-- /.container -->
     </section>
     <!-- /.section types -->
-
-
 
     <section class="section design">
       <div class="container">
