--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
     <section class="section section--dark projects">
       <div class="container">
         <div class="row">
-          <div class="col-50">
+          <div class="col-44">
             <div class="section-title section-title--left">
               <h2 class="section-title__heading section-title__heading--primary project--title">Завершенные <span
                   class="section-title__word">проекты</span></h2>
@@ -153,14 +153,17 @@
                   </div>
                 </div>
                 <!-- If we need navigation buttons -->
-                <div class="swiper-button-prev"></div>
                 <div class="swiper-pagination"></div>
-                <div class="swiper-button-next"></div>
+                <div class="swiper-nav-buttons">
+                  <div class="swiper-button-prev"></div>
+                  <div class="swiper-button-next"></div>
+                </div>
+
               </div>
 
           </div>
 
-          <div class="col-50">
+          <div class="col-56">
             <!-- Slider main container -->
             <div class="swiper-container">
               <!-- Additional required wrapper -->
