--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Yeseva+One&display=swap&subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+  <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/style.css">
   <title>gulpfile</title>
 </head>
@@ -188,11 +189,10 @@
       </div>
       <!-- /.container -->
     </section>
-
     <section class="section control">
       <div class="container">
-        <div class="section-title">
-          <h2 class="section-title__heading">Онлайн контроль</h2>
+        <div class="section-title control__section-title section-title--light">
+          <h2 class="section-title__heading control-title__heading">Онлайн контроль</h2>
           <!-- /.section-title__heading -->
           <div class="section-title__image">
             <img src="img/video.svg" alt="video">
@@ -200,6 +200,38 @@
           <!-- /.section-title__image -->
         </div>
         <!-- /.section-title -->
+
+        <div class="control__video video">
+          <img src="img//control/play-icon.svg" alt="play-icon" class="play video__play">
+        </div>
+        <!-- /.control__video video -->
+
+        <p class="control__text">На каждом объекте установлена ​​камера, которая транслирует ход работы на часах. В
+          любой момент вы можете зайти на наш сайт и следить за ходом работы в вашей квартире. Посмотрите прямую
+          трансляцию с одного из наших объектов! Оставьте заявку ниже чтобы получить ссылку на трансляцию.</p>
+
+        <form action="#" class="form control__form">
+
+          <div class="control__input-group">
+            <label for="user-name" class="label form__label control__label">Имя</label>
+            <input type="text" class="input form__input control__input" id="user-name" placeholder="Как вас зовут:">
+          </div>
+
+          <div class="control__input-group">
+            <label for="user-phone" class="label form__label control__label">Телефон</label>
+            <input type="tel" class="input form__input control__input" id="user-phone" placeholder="Ваш номер телефона:">
+          </div>
+
+          <button class="button button--primary control__button">Отправить</button>
+          <!-- /.button button--primary control__button -->
+
+          <div class="policy control__policy">
+            <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
+            <label for="policy-checkbox" class="policy__label control__policy-label">Я соглашаюсь с обработкой данных</label>
+          </div>
+          <!-- /.policy -->
+        </form>
+        <!-- /.form control__form --> 
       </div>
       <!-- /.container -->
     </section>
@@ -459,11 +491,11 @@
       <!-- /.modal__title -->
       <form action="#" class="form modal__form">
         <label for="user-name" class="label form__label label--light">Имя</label>
-        <input type="text" class="input form__input modal__input" id="user-name" placeholder="Как вас зовут:">
+        <input type="text" class="input form__input modal__input input--light" id="user-name" placeholder="Как вас зовут:">
         <label for="user-phone" class="label form__label label--light">Телефон</label>
-        <input type="tel" class="input form__input modal__input" id="user-phone" placeholder="Ваш номер телефона:">
+        <input type="tel" class="input form__input modal__input input--light" id="user-phone" placeholder="Ваш номер телефона:">
         <label for="user-email" class="label form__label label--light">Email</label>
-        <input type="email" class="input form__input modal__input" id="email" placeholder="Ваш email">
+        <input type="email" class="input form__input modal__input input--light" id="email" placeholder="Ваш email">
         <div class="policy modal__policy">
           <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
           <label for="policy-checkbox" class="policy__label">Я соглашаюсь с обработкой данных</label>
@@ -481,6 +513,10 @@
 <div class="go-up">
   <button class="scroll-up">Вверх</button>
 </div>
+<script src="js/wow.min.js"></script>
+<script>
+  new WOW().init()
+</script>
 <script src="./js/jquery.vide.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
