add mobile version of section control

--- a/src/index.html
+++ b/src/index.html
@@ -189,7 +189,8 @@
       </div>
       <!-- /.container -->
     </section>
-    <section class="section control">
+
+    <section class="section control control--dark">
       <div class="container">
         <div class="section-title control__section-title section-title--light">
           <h2 class="section-title__heading control-title__heading">Онлайн контроль</h2>
@@ -202,7 +203,7 @@
         <!-- /.section-title -->
 
         <div class="control__video video">
-          <img src="img//control/play-icon.svg" alt="play-icon" class="play video__play">
+          <img src="img//control/play-icon.svg" alt="play-icon" class="play control__video--play">
         </div>
         <!-- /.control__video video -->
 
@@ -217,7 +218,7 @@
             <input type="text" class="input form__input control__input" id="user-name" placeholder="Как вас зовут:">
           </div>
 
-          <div class="control__input-group">
+          <div class="control__input-group control__input-group--phone">
             <label for="user-phone" class="label form__label control__label">Телефон</label>
             <input type="tel" class="input form__input control__input" id="user-phone" placeholder="Ваш номер телефона:">
           </div>
@@ -510,8 +511,8 @@
   </div>
   <!-- /.modal -->
 
-<div class="go-up">
-  <button class="scroll-up">Вверх</button>
+<div class="scroll-up">
+  <button></button>
 </div>
 <script src="js/wow.min.js"></script>
 <script>
