trying to animate

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <header class="header">
     <div class="container">
       <div class="menu">
-        <div class="logo menu__logo">Repair Design Project</div>
+        <div class="logo menu__logo wow fadeInLeft">Repair Design Project</div>
         <nav class="nav menu__nav">
           <a href="#" class="nav__item">Главная</a>
           <a href="#" class="nav__item">Проекты</a>
@@ -512,15 +512,14 @@
   <!-- /.modal -->
 
 <div class="scroll-up">
-  <button></button>
+  <button class="button__scroll-up"></button>
 </div>
-<script src="js/wow.min.js"></script>
-<script>
-  new WOW().init()
-</script>
-<script src="./js/jquery.vide.min.js"></script>
+
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="./js/jquery.vide.min.js"></script>
 <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+<script src="js/wow.min.js"></script>
+<script>new WOW().init();</script>
 <script src="js/main.js"></script>
 </body>
 
