--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Yeseva+One&display=swap&subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+  <link rel="stylesheet" href="css/hover.css">
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/style.css">
   <title>gulpfile</title>
@@ -15,7 +16,7 @@
   <header class="header">
     <div class="container">
       <div class="menu">
-        <div class="logo menu__logo wow fadeInLeft">Repair Design Project</div>
+        <div class="logo menu__logo">Repair Design Project</div>
         <nav class="nav menu__nav">
           <a href="#" class="nav__item">Главная</a>
           <a href="#" class="nav__item">Проекты</a>
@@ -26,7 +27,8 @@
         </nav>
         <div class="contacts menu__contacts">
           <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
-          <button class="button contacts__button button--primary" data-toggle="modal">Заказать звонок</button>
+          <button class="button contacts__button button--primary" data-toggle="modal">Заказать
+            звонок</button>
         </div>
       </div>
     </div>
@@ -40,16 +42,22 @@
       </div>
       <div class="container">
         <div class="hero__content">
-          <h1 class="title hero__title">Турецкий ремонт в&nbsp;<span class="title--primary">Ростове-на-дону</span></h1>
-          <p class="hero__text">Получите готовый ремонт под ключ в срок с&nbsp;экономией рабочего времени до 45 дней
+          <h1 class="title hero__title wow fadeInRight" data-wow-delay="0.1s">Турецкий ремонт в&nbsp;<span
+              class="title--primary">Ростове-на-дону</span></h1>
+          <p class="hero__text" data-wow-delay="0.3s">Получите готовый ремонт под ключ в срок
+            с&nbsp;экономией рабочего
+            времени до 45 дней
             и&nbsp;20% от стоимости материалов за счет организации работы</p>
-          <button class="button hero__button button--primary" data-toggle="modal">Рассчитать стоимость</button>
-          <button class="button hero__button button--outline">Отправить заявку</button>
+          <button class="button hero__button button--primary" data-toggle="modal"
+            data-wow-delay="0.5s">Рассчитать
+            стоимость</button>
+          <button class="button hero__button button--outline" data-wow-delay="0.5s">Отправить
+            заявку</button>
         </div>
         <!-- /.hero__content -->
       </div>
       <!-- /.container -->
-      <a href="#" class="hero__scroll-down">листайте вниз</a>
+      <a href="#" class="hero__scroll-down wow bounce delay-4s" data-wow-iteration="2">листайте вниз</a>
     </section>
     <!-- /.hero -->
 
@@ -58,10 +66,11 @@
         <div class="row">
           <div class="col-44">
             <div class="section-title section-title--left">
-              <h2 class="section-title__heading section-title__heading--primary project--title">Завершенные <span
+              <h2 class="section-title__heading section-title__heading--primary project--title wow fadeInLeft">Завершенные <span
                   class="section-title__word">проекты</span></h2>
               <!-- /.section-title__heading -->
-              <p class="section-title__text">На сайте представлена ​​лишь небольшая часть работ, выполняемых нашей
+              <p class="section-title__text wow fadeInLeft">На сайте представлена ​​лишь небольшая часть работ,
+                выполняемых нашей
                 компанией. За 14 лет работы на строительном рынке мы осчастливили более 1000 семей</p>
             </div>
             <!-- /.section-title -->
@@ -192,7 +201,7 @@
 
     <section class="section control control--dark">
       <div class="container">
-        <div class="section-title control__section-title section-title--light">
+        <div class="section-title control__section-title section-title--light wow fadeInDown">
           <h2 class="section-title__heading control-title__heading">Онлайн контроль</h2>
           <!-- /.section-title__heading -->
           <div class="section-title__image">
@@ -241,7 +250,7 @@
     <section class="section types">
       <div class="container">
         <div class="section-title types__section-title">
-          <h2 class="section-title__heading">Виды ремонта</h2>
+          <h2 class="section-title__heading wow fadeInDown">Виды ремонта</h2>
           <!-- /.section-title__heading -->
           <div class="section-title__image">
             <img src="img/repair.svg" alt="repair">
@@ -356,7 +365,7 @@
 
     <section class="section design">
       <div class="container">
-        <div class="section-title design__section-title">
+        <div class="section-title design__section-title wow fadeInDown">
           <h2 class="section-title__heading">Дизайн проект</h2>
           <!-- /.section-title__heading -->
           <div class="section-design__image">
