--- a/src/index.html
+++ b/src/index.html
@@ -490,6 +490,68 @@
     </section>
     <!-- /.section types -->
   </main>
+  <footer class="footer section--dark">
+    <div class="container footer__container">
+      <div class="footer__wrap">
+        <h3 class="footer__title">Остались вопросы?</h3>
+        <form action="#" class="form footer__form">
+          <div class="input-group footer__input-group">
+            <label for="user-name" class="label form__label label--light">Имя</label>
+            <input type="text" class="input form__input footer__input input--light" id="user-name"
+              placeholder="Как вас зовут:">
+          </div>
+          <!-- /.input-group footer__input-group -->
+          <div class="input-group footer__input-group">
+            <label for="user-phone" class="label form__label label--light">Телефон</label>
+            <input type="tel" class="input form__input footer__input input--light" id="user-phone"
+              placeholder="Ваш номер телефона:">
+          </div>
+          <!-- /.input-group footer__input-group -->
+          <div class="input-group footer__input-group footer__input-group--full-width">
+            <label for="user-question" class="label form__label label--light">Вопрос</label>
+            <input type="text" class="input form__input footer__input input--light" id="user-question"
+              placeholder="Я хочу спросить">
+          </div>
+          <!-- /.input-group footer__input-group -->
+          <div class="policy footer__policy">
+            <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
+            <label for="policy-checkbox" class="policy__label policy__label--center policy__label--left">Я соглашаюсь с
+              обработкой данных</label>
+          </div>
+          <!-- /.policy -->
+          <button class="button button--primary footer__button">Отправить</button>
+          <!-- /.button button--primary footer__button -->
+        </form>
+        <!-- /.form modal__form -->
+      </div>
+      <!-- /.footer-wrap -->
+      
+    </div>
+    <!-- /.container -->
+    <div class="footer__menu">
+      <div class="container">
+        <div class="menu">
+          <div class="logo menu__logo">Repair Design Project</div>
+          <nav class="nav menu__nav">
+            <a href="#" class="nav__item">Главная</a>
+            <a href="#" class="nav__item">Проекты</a>
+            <a href="#" class="nav__item">Замер</a>
+            <a href="#" class="nav__item">Команда</a>
+            <a href="#" class="nav__item">Отзывы</a>
+            <a href="#" class="nav__item">Контакты</a>
+          </nav>
+          <div class="contacts menu__contacts">
+            <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
+            <button class="button contacts__button button--primary" data-toggle="modal">Заказать
+              звонок</button>
+          </div>
+        </div>
+      </div>
+      <!-- /.container -->
+    </div>
+    <!-- /.footer__menu -->
+  </footer>
+  <!-- /.footer section section--dark -->
 
   <div class="modal">
     <div class="modal__dialog">
