--- a/src/index.html
+++ b/src/index.html
@@ -491,24 +491,24 @@
     <!-- /.section types -->
   </main>
   <footer class="footer section--dark">
-    <div class="container footer__container">
+    <div class="container">
       <div class="footer__wrap">
         <h3 class="footer__title">Остались вопросы?</h3>
         <form action="#" class="form footer__form">
           <div class="input-group footer__input-group">
-            <label for="user-name" class="label form__label label--light">Имя</label>
+            <label for="user-name" class="label form__label label--light footer__label">Имя</label>
             <input type="text" class="input form__input footer__input input--light" id="user-name"
               placeholder="Как вас зовут:">
           </div>
           <!-- /.input-group footer__input-group -->
           <div class="input-group footer__input-group">
-            <label for="user-phone" class="label form__label label--light">Телефон</label>
+            <label for="user-phone" class="label form__label label--light footer__label">Телефон</label>
             <input type="tel" class="input form__input footer__input input--light" id="user-phone"
               placeholder="Ваш номер телефона:">
           </div>
           <!-- /.input-group footer__input-group -->
           <div class="input-group footer__input-group footer__input-group--full-width">
-            <label for="user-question" class="label form__label label--light">Вопрос</label>
+            <label for="user-question" class="label form__label label--light footer__label">Вопрос</label>
             <input type="text" class="input form__input footer__input input--light" id="user-question"
               placeholder="Я хочу спросить">
           </div>
