--- a/src/index.html
+++ b/src/index.html
@@ -224,12 +224,12 @@
 
           <div class="control__input-group">
             <label for="user-name" class="label form__label control__label">Имя</label>
-            <input type="text" class="input form__input control__input" id="user-name" placeholder="Как вас зовут:">
+            <input name="userName" autocomplete="off" type="text" class="input form__input control__input" id="user-name" placeholder="Как вас зовут:">
           </div>
 
           <div class="control__input-group control__input-group--phone">
             <label for="user-phone" class="label form__label control__label">Телефон</label>
-            <input type="tel" class="input form__input control__input" id="user-phone" placeholder="Ваш номер телефона:">
+            <input name="userPhone" autocomplete="off" type="tel" class="input form__input control__input" id="user-phone" placeholder="Ваш номер телефона:">
           </div>
 
           <button class="button button--primary control__button">Отправить</button>
@@ -562,12 +562,25 @@
       </h3>
       <!-- /.modal__title -->
       <form action="#" class="form modal__form">
-        <label for="user-name" class="label form__label label--light">Имя</label>
-        <input type="text" class="input form__input modal__input input--light" id="user-name" placeholder="Как вас зовут:">
-        <label for="user-phone" class="label form__label label--light">Телефон</label>
-        <input type="tel" class="input form__input modal__input input--light" id="user-phone" placeholder="Ваш номер телефона:">
-        <label for="user-email" class="label form__label label--light">Email</label>
-        <input type="email" class="input form__input modal__input input--light" id="email" placeholder="Ваш email">
+
+        <div class="input-group modal__input-group">
+          <label for="user-name" class="label form__label label--light">Имя</label>
+          <input type="text" autocomplete="off" name="userName" class="input form__input modal__input input--light" id="user-name"
+            placeholder="Как вас зовут:">
+        </div>
+        <!-- ### input-group modal__input-group ###-->
+        <div class="input-group modal__input-group">
+          <label for="user-phone" class="label form__label label--light">Телефон</label>
+          <input type="tel" autocomplete="off" name="userPhone" class="input form__input modal__input input--light" id="user-phone"
+            placeholder="Ваш номер телефона:">
+        </div>
+        <!-- ### input-group modal__input-group ###-->
+        <div class="input-group modal__input-group modal__input-group--last">
+          <label for="user-email" class="label form__label label--light">Email</label>
+          <input type="email" autocomplete="off" name="userEmail" class="input form__input modal__input input--light" id="user-email"
+            placeholder="Ваш email">
+        </div>
+        <!-- ### input-group modal__input-group ###-->
         <div class="policy modal__policy">
           <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
           <label for="policy-checkbox" class="policy__label">Я соглашаюсь с обработкой данных</label>
@@ -591,6 +604,8 @@
 <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
 <script src="js/wow.min.js"></script>
 <script>new WOW().init();</script>
+<script src="js/jquery.validate.min.js"></script>
+<script src="js/jquery.mask.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 
