--- a/src/index.html
+++ b/src/index.html
@@ -494,22 +494,24 @@
     <div class="container">
       <div class="footer__wrap">
         <h3 class="footer__title">Остались вопросы?</h3>
+
         <form action="#" class="form footer__form">
           <div class="input-group footer__input-group">
             <label for="user-name" class="label form__label label--light footer__label">Имя</label>
-            <input type="text" class="input form__input footer__input input--light" id="user-name"
+            <input type="text" name="userName" autocomplete="off" class="input form__input footer__input input--light" id="user-name"
               placeholder="Как вас зовут:">
           </div>
           <!-- /.input-group footer__input-group -->
           <div class="input-group footer__input-group">
             <label for="user-phone" class="label form__label label--light footer__label">Телефон</label>
-            <input type="tel" class="input form__input footer__input input--light" id="user-phone"
+            <input type="tel" name="userPhone" autocomplete="off" class="input form__input footer__input input--light" id="user-phone"
               placeholder="Ваш номер телефона:">
           </div>
           <!-- /.input-group footer__input-group -->
           <div class="input-group footer__input-group footer__input-group--full-width">
             <label for="user-question" class="label form__label label--light footer__label">Вопрос</label>
-            <input type="text" class="input form__input footer__input input--light" id="user-question"
+            <input type="text" autocomplete="off" class="input form__input footer__input input--light"
+              id="user-question"
               placeholder="Я хочу спросить">
           </div>
           <!-- /.input-group footer__input-group -->
@@ -525,6 +527,9 @@
         <!-- /.form modal__form -->
       </div>
       <!-- /.footer-wrap -->
+      <div class="map footer__map">
+
+      </div>
       
     </div>
     <!-- /.container -->
