fix control button and div.invalid

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/hover.css">
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=daad87b1-30e6-404a-a801-ff76ef0f78eb&lang=ru_RU" type="text/javascript"></script>
   <title>gulpfile</title>
 </head>
 
@@ -494,7 +495,6 @@
     <div class="container">
       <div class="footer__wrap">
         <h3 class="footer__title">Остались вопросы?</h3>
-
         <form action="#" class="form footer__form">
           <div class="input-group footer__input-group">
             <label for="user-name" class="label form__label label--light footer__label">Имя</label>
@@ -527,7 +527,14 @@
         <!-- /.form modal__form -->
       </div>
       <!-- /.footer-wrap -->
-      <div class="map footer__map">
+      <div class="footer__text">
+        <h2 class="footer__text__description">Ростов на дону, Торговый центр Plaza Прямой телефон +7 (999) 768 32 99</h2>
+      </div>
+      <div class="footer__img">
+        <img src="../img/footer/footer-mail.svg" alt="" class=" footer__img--icon footer-mail">
+        <img src="../img/footer/footer-instagram.svg" alt="" class=" footer__img--icon footer-instagram">
+      </div>
+      <div class="map footer__map" id="map">
 
       </div>
       
