--- a/src/index.html
+++ b/src/index.html
@@ -237,8 +237,8 @@
           <!-- /.button button--primary control__button -->
 
           <div class="policy control__policy">
-            <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
-            <label for="policy-checkbox" class="policy__label control__policy-label">Я соглашаюсь с обработкой данных</label>
+            <input type="checkbox" name="policy-checkbox" id="control__policy-checkbox" class="policy__checkbox" checked>
+            <label for="control__policy-checkbox" class="policy__label control__policy-label">Я соглашаюсь с обработкой данных</label>
           </div>
           <!-- /.policy -->
         </form>
@@ -516,8 +516,8 @@
           </div>
           <!-- /.input-group footer__input-group -->
           <div class="policy footer__policy">
-            <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
-            <label for="policy-checkbox" class="policy__label policy__label--center policy__label--left">Я соглашаюсь с
+            <input type="checkbox" name="policy-checkbox" id="footer__policy-checkbox" class="policy__checkbox" checked>
+            <label for="footer__policy-checkbox" class="policy__label policy__label--center policy__label--left">Я соглашаюсь с
               обработкой данных</label>
           </div>
           <!-- /.policy -->
@@ -594,8 +594,8 @@
         </div>
         <!-- ### input-group modal__input-group ###-->
         <div class="policy modal__policy">
-          <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
-          <label for="policy-checkbox" class="policy__label">Я соглашаюсь с обработкой данных</label>
+          <input type="checkbox" name="policy-checkbox" id="modal__policy-checkbox" class="policy__checkbox" checked>
+          <label for="modal__policy-checkbox" class="policy__label">Я соглашаюсь с обработкой данных</label>
         </div>
         <!-- /.policy -->
         <button class="button button--primary modal__button">Отправить заявку</button>
