--- a/src/index.html
+++ b/src/index.html
@@ -528,15 +528,17 @@
       </div>
       <!-- /.footer-wrap -->
       <div class="footer__text">
-        <h2 class="footer__text__description">Ростов на дону, Торговый центр Plaza Прямой телефон +7 (999) 768 32 99</h2>
+        <span class="footer__text__description">Ростов на дону, Торговый центр Plaza Прямой телефон <a
+            href="tel:+79997683299" class="footer__text--phone">+7 (999) 768 32 99</a></span>
       </div>
       <div class="footer__img">
-        <img src="../img/footer/footer-mail.svg" alt="" class=" footer__img--icon footer-mail">
-        <img src="../img/footer/footer-instagram.svg" alt="" class=" footer__img--icon footer-instagram">
+        <img src="../img/footer/footer-mail.svg" alt="#" class="footer__img--icon footer-mail">
+        <img src="../img/footer/footer-instagram.svg" alt="#" class="footer__img--icon footer-instagram">
       </div>
-      <div class="map footer__map" id="map">
+      <div class="footer__ymap--container">
+        <div class="map footer__map" id="map"></div>
+      </div>
 
-      </div>
       
     </div>
     <!-- /.container -->
