--- a/src/index.html
+++ b/src/index.html
@@ -535,10 +535,12 @@
         <img src="../img/footer/footer-mail.svg" alt="#" class="footer__img--icon footer-mail">
         <img src="../img/footer/footer-instagram.svg" alt="#" class="footer__img--icon footer-instagram">
       </div>
-      <div class="footer__ymap--container">
-        <div class="map footer__map" id="map"></div>
-      </div>
 
+      <div class="footer__ymap--container">
+        <div class="map footer__map" id="map">
+          
+        </div>
+      </div>
       
     </div>
     <!-- /.container -->
