--- a/src/index.html
+++ b/src/index.html
@@ -491,6 +491,8 @@
     </section>
     <!-- /.section types -->
   </main>
+
+  <!--### FOOTER ###-->
   <footer class="footer section--dark">
     <div class="container">
       <div class="footer__wrap">
@@ -527,26 +529,42 @@
         <!-- /.form modal__form -->
       </div>
       <!-- /.footer-wrap -->
-      <div class="footer__text">
-        <span class="footer__text__description">Ростов на дону, Торговый центр Plaza Прямой телефон <a
-            href="tel:+79997683299" class="footer__text--phone">+7 (999) 768 32 99</a></span>
-      </div>
-      <div class="footer__img">
-        <a href="#" target="_blank" rel="noopener noreferrer"><img src="../img/footer/footer-mail.svg" alt="#"
-            class="footer__img--icon footer-mail"></a>
-        <a href="#" target="_blank" rel="noopener noreferrer"><img src="../img/footer/footer-instagram.svg" alt="#"
-            class="footer__img--icon footer-instagram"></a>
+
+      <!--### FOOTER HEADER ###-->
+      <div class="footer__header">
+        <div class="footer__text">
+          <span class="footer__text__description">Ростов на дону, Торговый центр Plaza Прямой телефон <a
+              href="tel:+79997683299" class="footer__text--phone">+7 (999) 768 32 99</a></span>
+        </div>
+        <a class="footer__img">
+          <a href="#" target="_blank"><img src="../img/footer/footer-mail.svg" alt="#"
+              class="footer__img--icon footer__img--mail"></a>
+          <a href="#" target="_blank"><img src="../img/footer/footer-instagram.svg" alt="#"
+              class="footer__img--icon footer__img--instagram"></a>
+        </a>
       </div>
 
-      
+      <!--### ЯНДЕКС КАРТА ###-->      
       <div class="footer__ymap--container">
         <div class="map footer__map" id="map">
 
         </div>
       </div>
+      <div class="footer__header footer__header--second">
+        <div class="footer__text">
+          <span class="footer__text__description">Ростов на дону, Торговый центр Plaza Прямой телефон <a
+              href="tel:+79997683299" class="footer__text--phone">+7 (999) 768 32 99</a></span>
+        </div>
+        <div class="footer__img">
+          <a href="#" target="_blank"><img src="../img/footer/footer-mail.svg" alt="#" class="footer__img--icon footer-mail"></a>
+          <a href="#" target="_blank"><img src="../img/footer/footer-instagram.svg" alt="#" class="footer__img--icon footer-instagram"></a>
+        </div>
+      </div>
       
     </div>
     <!-- /.container -->
+
+    <!--### FOOTER MENU ###-->
     <div class="footer__menu">
       <div class="container">
         <div class="menu">
