--- a/src/index.html
+++ b/src/index.html
@@ -221,7 +221,7 @@
           любой момент вы можете зайти на наш сайт и следить за ходом работы в вашей квартире. Посмотрите прямую
           трансляцию с одного из наших объектов! Оставьте заявку ниже чтобы получить ссылку на трансляцию.</p>
 
-        <form action="#" class="form control__form">
+        <form action="php/send.php" method="POST" class="form control__form">
 
           <div class="control__input-group">
             <label for="user-name" class="label form__label control__label">Имя</label>
@@ -497,7 +497,7 @@
     <div class="container">
       <div class="footer__wrap">
         <h3 class="footer__title">Остались вопросы?</h3>
-        <form action="#" class="form footer__form">
+        <form action="php/send.php" method="POST" class="form footer__form">
           <div class="input-group footer__input-group">
             <label for="user-name" class="label form__label label--light footer__label">Имя</label>
             <input type="text" name="userName" autocomplete="off" class="input form__input footer__input input--light" id="user-name"
@@ -556,8 +556,10 @@
               href="tel:+79997683299" class="footer__text--phone">+7 (999) 768 32 99</a></span>
         </div>
         <div class="footer__img">
-          <a href="#" target="_blank"><img src="../img/footer/footer-mail.svg" alt="#" class="footer__img--icon footer-mail"></a>
-          <a href="#" target="_blank"><img src="../img/footer/footer-instagram.svg" alt="#" class="footer__img--icon footer-instagram"></a>
+          <a href="#" target="_blank"><img src="../img/footer/footer-mail.svg" alt="#"
+              class="footer__img--icon footer-mail"></a>
+          <a href="#" target="_blank"><img src="../img/footer/footer-instagram.svg" alt="#"
+              class="footer__img--icon footer-instagram"></a>
         </div>
       </div>
       
@@ -598,7 +600,7 @@
         Оставьте заявку и наш менеджер свяжется с вами
       </h3>
       <!-- /.modal__title -->
-      <form action="#" class="form modal__form">
+      <form action="php/send.php" method="POST" class="form modal__form">
 
         <div class="input-group modal__input-group">
           <label for="user-name" class="label form__label label--light">Имя</label>
