--- a/src/index.html
+++ b/src/index.html
@@ -537,9 +537,9 @@
               href="tel:+79997683299" class="footer__text--phone">+7 (999) 768 32 99</a></span>
         </div>
         <a class="footer__img">
-          <a href="#" target="_blank"><img src="../img/footer/footer-mail.svg" alt="#"
+          <a href="#" target="_blank"><img src="img/footer/footer-mail.svg" alt="#"
               class="footer__img--icon footer__img--mail"></a>
-          <a href="#" target="_blank"><img src="../img/footer/footer-instagram.svg" alt="#"
+          <a href="#" target="_blank"><img src="img/footer/footer-instagram.svg" alt="#"
               class="footer__img--icon footer__img--instagram"></a>
         </a>
       </div>
