--- a/src/index.html
+++ b/src/index.html
@@ -221,7 +221,7 @@
           любой момент вы можете зайти на наш сайт и следить за ходом работы в вашей квартире. Посмотрите прямую
           трансляцию с одного из наших объектов! Оставьте заявку ниже чтобы получить ссылку на трансляцию.</p>
 
-        <form action="php/send.php" method="POST" class="form control__form">
+        <form action="send.php" method="POST" class="form control__form">
 
           <div class="control__input-group">
             <label for="user-name" class="label form__label control__label">Имя</label>
@@ -497,7 +497,7 @@
     <div class="container">
       <div class="footer__wrap">
         <h3 class="footer__title">Остались вопросы?</h3>
-        <form action="php/send.php" method="POST" class="form footer__form">
+        <form action="send.php" method="POST" class="form footer__form">
           <div class="input-group footer__input-group">
             <label for="user-name" class="label form__label label--light footer__label">Имя</label>
             <input type="text" name="userName" autocomplete="off" class="input form__input footer__input input--light" id="user-name"
