--- a/src/index.html
+++ b/src/index.html
@@ -501,8 +501,8 @@
         <h3 class="footer__title">Остались вопросы?</h3>
         <form action="send.php" method="POST" class="form footer__form">
           <div class="input-group footer__input-group">
-            <label for="modal__user-name" class="label form__label label--light footer__label">Имя</label>
-            <input type="text" name="userName" autocomplete="off" class="input form__input footer__input input--light" id="modal__user-name"
+            <label for="footer__user-name" class="label form__label label--light footer__label">Имя</label>
+            <input type="text" name="userName" autocomplete="off" class="input form__input footer__input input--light" id="footer__user-name"
               placeholder="Как вас зовут:">
           </div>
           <!-- /.input-group footer__input-group -->
