add thanks modal

--- a/src/index.html
+++ b/src/index.html
@@ -627,7 +627,7 @@
           <label for="modal__policy-checkbox" class="policy__label">Я соглашаюсь с обработкой данных</label>
         </div>
         <!-- /.policy -->
-        <button class="button button--primary modal__button">Отправить заявку</button>
+        <button class="button button--primary modal__button" data-toggle="thanks">Отправить заявку</button>
         <!-- /.button button--primary modal__button -->
       </form>
       <!-- /.form modal__form -->
@@ -635,6 +635,21 @@
     <!-- /.modal__dialog -->
   </div>
   <!-- /.modal -->
+
+
+    <div class="thanks">
+      <div class="thanks__dialog">
+        <button class="thanks__close"></button>
+        <!-- /.modal__close -->
+        <h3 class="thanks__title">
+          Форма отправилась
+        </h3>
+        <!-- /.modal__title -->
+
+      </div>
+      <!-- /.modal__dialog -->
+    </div>
+    <!-- /.modal -->
 
 <div class="scroll-up">
   <button class="button__scroll-up"></button>
